--- a/themes/wordyintrovert/style.css
+++ b/themes/wordyintrovert/style.css
@@ -756,7 +756,7 @@ nav a {
 }
 
 .post-snippet-single {
-    margin-bottom: 75px;
+    margin-bottom: 38px;
 }
 
 img.wp-post-image, .video-thumbnail {
@@ -847,6 +847,26 @@ img.wp-post-image, .video-thumbnail {
 
 .post-read-more a:hover {
     color: #009bff;
+}
+
+#facebook-share {
+    background-color: #3b579d;
+    background-image: url(images/facebook-share.png);
+    background-repeat: no-repeat;
+    background-size: 116px 40px;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1.4rem;
+    height: 40px;
+    margin: 0 auto 40px auto;
+    text-align: center;
+    width: 116px;
+}
+
+#facebook-share span {
+    display: block;
+    padding: 3px 0 0 36px;
 }
 
 #post-sidebar {
